# hs-predict

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_ja.md
hs-predict-wasm/: Cargo.toml  README.md
hs-predict-wasm/src/: lib.rs
src/: error.rs  lib.rs  mixture.rs  pipeline.rs  types.rs
src/llm/: mock.rs  mod.rs  prompt.rs
src/pubchem/: error.rs  mod.rs
src/rules/: chapter38.rs  jp_table.rs  matcher.rs  mod.rs  static_table.rs  types.rs
src/session/: flow.rs  messages.rs  mod.rs  question.rs  state.rs
src/smiles/: chapter_map.rs  detector.rs  mod.rs
tasks/: lessons.md  todo.md
