[package]
name = "hs-predict-wasm"
version = "0.4.1"
edition = "2021"
description = "WebAssembly bindings for hs-predict — HS code prediction for chemical products"
repository = "https://github.com/kent-tokyo/hs-predict"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hs-predict         = { path = "..", version = "0.4.1", default-features = false }
wasm-bindgen       = "=0.2.121"
js-sys             = "=0.3.98"
serde              = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "=0.6.5"
serde_json         = "1"

[dev-dependencies]
wasm-bindgen-test  = "0.3"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
